--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 <h1> Look at my story map!</h1>
 <!-- Your embed code goes in here -->
+<iframe width='100%' height='520' frameborder='0' src='http://bl.ocks.org/anonymous/raw/1af46cade435140c4b0d' allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 
 <p>What did you think?</p>
+<p>Story maps are an interesting way to tell a tale, if you have a story to tell. I struggled to determine the story I wanted to share. I had a few ideas, especially with the group project hazard data, but it wasn't coming out correctly.</p>
+<p>I finally decided to see how a story map could work as a business pitch. My cousins are attempting to start a brewery and I decided to share their story. I really enjoyed using odyssey from cartdb as it was simple to use.</p>
+<p>The thing I liked least about odyssey.js was despite using markdown (which made things incredibly easy), the formatting for positioning of photos and text was not straightforward. Regardless, I would use this again for a quick project.</p>
 </body>
 </html>
